# ctc-simulator

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
data/: DATA.md  schedule.csv
data_pipeline/: DATA_PIPELINE.md
data_pipeline/etl/: main.cpp
data_pipeline/etl/include/: processor.h  system_config.h
data_pipeline/etl/include/rail_systems/: lirr_config.h  subway_config.h
data_pipeline/etl/include/systems/: mnr_config.h  subway_config.h
data_pipeline/zip_extractor/: Cargo.toml
data_pipeline/zip_extractor/src/: main.rs
docs/: dispatch.md  factory.md  graph.md  scheduler.md  subway.md
docs/core/: central_control.md  dispatch.md  switch.md
docs/map/: graph.md  lirr.md  metro_north.md  subway.md
docs/system/: factory.md  registry.md  scheduler.md
etl/: main.cpp  mnr_config.h  processor.h  subway_config.h  system_config.h
etl/include/: processor.h
etl/include/systems/: lirr_config.h
include/: config.h  constants.h  railroad_constants.h  test_utils.h  utils.h
include/constants/: constants.h  railroad_constants.h
include/core/: agency_control.h  central_control.h  dispatch.h  factory.h  platform.h  scheduler.h  signal.h  station.h  switch.h  track.h  train.h
include/enum/: event_type.h  signal_state.h  transit_types.h
include/enums/: direction.h  service_type.h  train_line.h  train_status.h  transit_types.h  transit_types.hpp
include/map/: base.h  graph.h  lirr.h  metro_north.h  subway.h
include/system/: central_logger.h  factory.h  logger.h  registry.h  scheduler.h
include/systems/: scheduler.h
include/utils/: test_utils.h  utils.h
src/: dispatch.cpp  logger.cpp  main.cpp  platform.cpp  signal.cpp  station.cpp  track.cpp  train.cpp
src/core/: agency_control.cpp  central_control.cpp  dispatch.cpp  factory.cpp  platform.cpp  scheduler.cpp  signal.cpp  station.cpp  switch.cpp  track.cpp  train.cpp
src/map/: base.cpp  graph.cpp  lirr.cpp  metro_north.cpp  subway.cpp
src/system/: central_logger.cpp  factory.cpp  logger.cpp  registry.cpp  scheduler.cpp
src/systems/: logger.cpp  registry.cpp  scheduler.cpp
tests/: test_dispatch.cpp  test_platform.cpp  test_signal.cpp  test_station.cpp  test_track.cpp  test_train.cpp
tests/core/: test_agency_control.cpp  test_central_control.cpp  test_dispatch.cpp  test_factory.cpp  test_logger.cpp  test_platform.cpp  test_scheduler.cpp  test_signal.cpp  test_station.cpp  test_switch.cpp  test_track.cpp  test_train.cpp
tests/map/: test_base.cpp  test_graph.cpp  test_lirr.cpp  test_metro_north.cpp  test_subway.cpp
tests/system/: test_factory.cpp  test_logger.cpp  test_registry.cpp  test_scheduler.cpp
tests/systems/: test_logger.cpp  test_scheduler.cpp
